--- a/src/blocks/body/body.css
+++ b/src/blocks/body/body.css
@@ -1,5 +1,5 @@
 .body {
-  font-family: "Inter", Arial, sans-serif;
+  font-family: Arial, sans-serif;
   font-style: normal;
   min-width: 320px;
   margin: 0 auto;
