--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,27 @@
 @import url(./blocks/header/__menu/header__menu.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/header/__profile/header__profile.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__container/footer__container.css);
+@import url(./blocks/footer/__text-container/footer__text-container.css);
+@import url(./blocks/footer/__link/footer__link.css);
+@import url(./blocks/footer/__text/footer__text.css);
+@import url(./blocks/footer/__icons/footer__icons.css);
+@import url(./blocks/footer/__icon-classmates/footer__icon-classmates.css);
+@import url(./blocks/footer/__icon-vk/footer__icon-vk.css);
+@import url(./blocks/application-form/application-form.css);
+@import url(./blocks/application-form/__title/application-form__title.css);
+@import url(./blocks/application-form/__status-bar/application-form__status-bar.css);
+@import url(./blocks/application-form/__subtitle/application-form__subtitle.css);
+@import url(./blocks/application-form/__text/application-form__text.css);
+@import url(./blocks/application-form/__text/_type/application-form__text_type_address.css);
+@import url(./blocks/application-form/__form/application-form__form.css);
+@import url(./blocks/application-form/__input-container/application-form__input-container.css);
+@import url(./blocks/application-form/__input/application-form__input.css);
+@import url(./blocks/application-form/__input/_type/application-form__input_type_select.css);
+@import url(./blocks/application-form/__button/application-form__button.css);
+@import url(./blocks/application-form/__button/_type/application-form__button_type_add-input.css);
+@import url(./blocks/application-form/__button/_type/application-form__button_type_search.css);
+@import url(./blocks/application-form/__button/_type/application-form__button_type_delete-input.css);
+@import url(./blocks/application-form/__button/_type/application-form__button_type_submit.css);
+@import url(./blocks/application-form/__text/_type/application-form__text_type_poem.css);
