--- a/src/blocks/lead/__button/lead__button.css
+++ b/src/blocks/lead/__button/lead__button.css
@@ -1,10 +1,19 @@
 .lead__button {
-    width: 100%;
-    height: 32px;
-    background-color: #667080;
-    border: 2px solid #667080;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 16px;
-    color: #E5E5E5;
+  width: 100%;
+  height: 32px;
+  background-color: #667080;
+  border: 2px solid #667080;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16px;
+  color: #e5e5e5;
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__button {
+    width: 336px;
+    height: 52px;
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
