--- a/src/blocks/lead/lead.css
+++ b/src/blocks/lead/lead.css
@@ -1,3 +1,8 @@
-.lead {
-  margin-top: 24px;
+@media screen and (min-width: 1024px) {
+  .lead {
+    border: 4px solid #667080;
+    display: grid;
+    grid-template-columns: 37% 1fr;
+    column-gap: 216px;
+  }
 }
