--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 @import url(./blocks/application-form/__button/_type/application-form__button_type_submit.css);
 @import url(./blocks/application-form/__button/_type/application-form__button_type_back.css);
 @import url(./blocks/application-form/__button/_type/application-form__button_type_history.css);
+@import url(./blocks/application-form/__button/_disabled/application-form__button_disabled.css);
 @import url(./blocks/application-form/__text/_type/application-form__text_type_poem.css);
 @import url(./blocks/application-form/__routing-link/application-form__routing-link.css);
 
