--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,6 +1,8 @@
 .header__link {
     text-decoration: none;
-    color: #667080;
+    color: #f5f1e6;
+    font-family: Averia Libre;
+    font-style: normal;
     font-weight: 300;
     font-size: 18px;
     line-height: 21px;
