--- a/src/blocks/header/__icon-profile/header__icon-profile.css
+++ b/src/blocks/header/__icon-profile/header__icon-profile.css
@@ -1,9 +1,4 @@
 .header__icon-profile {
-    width: 30px;
-}
-
-@media screen and (min-width: 1024px) {
-    .header__icon-profile {
-        display: none;
-    }
+    width: 32px;
+    height: 32px;
 }
