--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
     min-height: 56px;
-    background-color: #c4c4c4;
+    background-color: #e85137;
     display: flex;
 }
