--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,10 +1,12 @@
 .footer {
     width: 100%;
-    background-color: rgba(196, 196, 196, 0.38);
+    min-height: 97px;
+    display: flex;
+    background-color: #f5f1e6;
 }
 
 @media screen and (min-width: 1024px) {
     .footer {
-        background-color: rgba(196, 196, 196, 0.8);
+        min-height: 176px;
     }
 }
