--- a/src/blocks/info-list/__helpful-info/info-list__helpful-info.css
+++ b/src/blocks/info-list/__helpful-info/info-list__helpful-info.css
@@ -2,15 +2,31 @@
     min-height: 18px;
     margin: 0;
     padding: 0;
+    font-family: Raleway;
+    font-style: normal;
     font-weight: 300;
-    font-size: 10px;
-    line-height: 12px;
-    color: #667080;
+    font-size: 14px;
+    line-height: 20px;
+    color: #737273;
+}
+
+.info-list__helpful-info:last-of-type {
+    font-size: 12px;
+    line-height: 16px;
+    margin: 12px 28px 0 0;
+    text-align: end;
 }
 
 @media screen and (min-width: 1024px) {
     .info-list__helpful-info {
         font-size: 14px;
         line-height: 16px;
+        color: #667080;
+    }
+
+    .info-list__helpful-info:last-of-type {
+        margin: 0;
+        font-size: 12px;
+        text-align: start;
     }
 }
