--- a/src/blocks/social-icons/social-icons.css
+++ b/src/blocks/social-icons/social-icons.css
@@ -1,14 +1,15 @@
 .social-icons {
-    width: 46px;
-    min-height: 16px;
-    margin-top: 30px;
+    width: 26px;
+    min-height: 64px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 @media screen and (min-width: 1024px) {
     .social-icons {
         width: 54px;
-        margin-top: 104px;
+        min-height: 16px;
+        flex-direction: row;
     }
 }
