--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,8 @@
 @import url(./blocks/footer/__info/footer__info.css);
 @import url(./blocks/info-list/info-list.css);
 @import url(./blocks/info-list/__helpful-info/info-list__helpful-info.css);
+@import url(./blocks/info-list/__helpful-info/_type/info-list__helpful-info_type_mobile.css);
+@import url(./blocks/info-list/__helpful-info/_type/info-list__helpful-info_type_desktop.css);
 @import url(./blocks/social-icons/social-icons.css);
 @import url(./blocks/social-icons/__icon-OK/social-icons__icon-OK.css);
 @import url(./blocks/social-icons/__icon-Vk/social-icons__icon-Vk.css);
