--- a/src/blocks/lead/__button/lead__button.css
+++ b/src/blocks/lead/__button/lead__button.css
@@ -1,19 +1,23 @@
 .lead__button {
   width: 100%;
   height: 32px;
-  background-color: #667080;
-  border: 2px solid #667080;
-  font-weight: 300;
+  background-color: #e85137;
+  border: 2px solid #e85137;
+  border-radius: 8px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 800;
   font-size: 14px;
   line-height: 16px;
-  color: #e5e5e5;
+  text-align: center;
+  color: #f5f1e6;
 }
 
 @media screen and (min-width: 1024px) {
   .lead__button {
     width: 336px;
-    height: 52px;
-    font-size: 18px;
-    line-height: 21px;
+    height: 56px;
+    font-size: 24px;
+    line-height: 28px;
   }
 }
