--- a/src/blocks/lead/lead.css
+++ b/src/blocks/lead/lead.css
@@ -1,8 +1,25 @@
+.lead {
+  width: 94.74%;
+  margin: 24px auto 40px;
+  display: flex;
+  flex-direction: column;
+}
+
 @media screen and (min-width: 1024px) {
   .lead {
-    border: 4px solid #667080;
+    width: 100%;
+    margin: 0;
+    padding: 56px 0;
+    background: #F5F1E6;
     display: grid;
-    grid-template-columns: 37% 1fr;
-    column-gap: 216px;
+    grid-template-columns: 45.47% 1fr;
+    column-gap: 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead {
+    padding: 56px 120px;
+    border-radius: 24px;
   }
 }
