--- a/src/blocks/application-form/__button/_disabled/application-form__button_disabled.css
+++ b/src/blocks/application-form/__button/_disabled/application-form__button_disabled.css
@@ -1,5 +1,3 @@
 .application-form__button_disabled {
-  background: #ffffff;
-  color: #000000;
-  border: 1px solid #667080;
+  background: #ef8573;
 }
