--- a/src/blocks/application-form/__button/_type/application-form__button_type_add-input.css
+++ b/src/blocks/application-form/__button/_type/application-form__button_type_add-input.css
@@ -5,8 +5,17 @@
   background-position: center;
   background-color: #ffffff;
   background-image: url(../../../../images/button-add.svg);
-  width: 40px;
-  height: 40px;
+  background-size: cover;
+  width: 56px;
+  height: 56px;
   align-self: center;
-  margin-top: 12px;
+  margin-top: 32px;
+}
+
+@media screen and (max-width: 425px) {
+  .application-form__button_type_add-input {
+    margin-top: 16px;
+    width: 40px;
+    height: 40px;
+  }
 }
