--- a/src/blocks/application-form/__icon-address/application-form__icon-address.css
+++ b/src/blocks/application-form/__icon-address/application-form__icon-address.css
@@ -1,2 +1,11 @@
 .application-form__icon-address {
+  width: 24px;
+  height: 24px;
+}
+
+@media screen and (max-width: 425px) {
+  .application-form__icon-address {
+    width: 16px;
+    height: 16px;
+  }
 }
