--- a/src/blocks/application-form/__poem-container/application-form__poem-container.css
+++ b/src/blocks/application-form/__poem-container/application-form__poem-container.css
@@ -2,7 +2,7 @@
   margin-top: 20px;
   padding: 20px 30px;
   width: 100%;
-  min-height: 200px;
-  border: 2px solid #667080;
+  border: 4px solid #f5f1e6;
   box-sizing: border-box;
+  border-radius: 12px;
 }
