--- a/src/blocks/application-form/__subtitle/application-form__subtitle.css
+++ b/src/blocks/application-form/__subtitle/application-form__subtitle.css
@@ -1,14 +1,18 @@
 .application-form__subtitle {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
   margin: 0;
   font-weight: 300;
   font-size: 24px;
   line-height: 28px;
   align-self: center;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
   .application-form__subtitle {
-    font-size: 22px;
+    font-size: 18px;
     line-height: 24px;
     margin-top: 36px;
   }
@@ -16,8 +20,8 @@
 
 @media screen and (max-width: 425px) {
   .application-form__subtitle {
-    font-size: 18px;
-    line-height: 21px;
+    font-size: 14px;
+    line-height: 20px;
     align-self: flex-start;
   }
 }
