--- a/src/blocks/application-form/__text/application-form__text.css
+++ b/src/blocks/application-form/__text/application-form__text.css
@@ -1,9 +1,17 @@
 .application-form__text {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
   margin: 0;
   margin-top: 12px;
-  align-self: center;
+  align-self: start;
 }
 
-.application-form__text:first-of-type {
-  margin-top: 28px;
+@media screen and (max-width: 425px) {
+  .application-form__text {
+    font-size: 14px;
+    line-height: 20px;
+  }
 }
