--- a/src/blocks/application-form/__title/application-form__title.css
+++ b/src/blocks/application-form/__title/application-form__title.css
@@ -1,22 +1,26 @@
 .application-form__title {
+  font-family: "Cormorant Garamond";
+  font-style: normal;
+  font-weight: 700;
   margin: 0;
   margin-top: 40px;
-  font-weight: 300;
   font-size: 48px;
-  line-height: 56px;
+  line-height: 58px;
+  max-width: 424px;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
   .application-form__title {
-    font-size: 38px;
-    line-height: 43px;
+    font-size: 42px;
+    line-height: 46px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .application-form__title {
     margin-top: 55px;
-    font-size: 28px;
-    line-height: 33px;
+    font-size: 36px;
+    line-height: 36px;
   }
 }
