--- a/src/blocks/item/__text/item__text.css
+++ b/src/blocks/item/__text/item__text.css
@@ -1,15 +1,16 @@
 .item__text {
-    width: 206px;
-    font-weight: 300;
+    width: 213px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 500;
     font-size: 14px;
     line-height: 20px;
-    color: #667080;
+    color: #17192d;
     margin: 0;
 }
 
 @media screen and (min-width: 1024px) {
     .item__text {
-        width: 100%;
         text-align: center;
     }
 }
