--- a/src/blocks/item/item.css
+++ b/src/blocks/item/item.css
@@ -7,6 +7,7 @@
 @media screen and (min-width: 1024px) {
     .item {
         flex-direction: column;
+        justify-content: normal;
         width: 300px;
     }
 }
