--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@
 @import url(./blocks/lead/__button/lead__button.css);
 
 @import url(./blocks/info/info.css);
+@import url(./blocks/info/__title/info__title.css);
 @import url(./blocks/info/__items/info__items.css);
 @import url(./blocks/item/item.css);
 @import url(./blocks/item/__image/item__image.css);
