--- a/src/blocks/card/__button/card__button.css
+++ b/src/blocks/card/__button/card__button.css
@@ -1,9 +1,13 @@
 .card__button {
-    width: 113px;
+    display: none;
+    width: 160px;
     height: 32px;
-    background-color: #667080;
-    border: 2px solid #667080;
-    font-weight: 300;
+    background-color: #E85137;
+    border: 2px solid #E85137;
+    border-radius: 8px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 800;
     font-size: 14px;
     line-height: 16px;
     color: #E5E5E5;
@@ -11,6 +15,6 @@
 
 @media screen and (min-width: 1024px) {
     .card__button {
-        width: 176px;
+        display: block;
     }
 }
