--- a/src/blocks/card/__subtext/_position/card__subtext_position_last-of-type.css
+++ b/src/blocks/card/__subtext/_position/card__subtext_position_last-of-type.css
@@ -1,5 +1,4 @@
-@media screen and (min-width: 1024px) {
-    .card__subtext_position_last-of-type {
-        margin: 0 0 24px 24px;
-    }
+.card__subtitle_position_last-of-type {
+    margin: 0 0 16px 16px;
+    width: 132px;
 }
