--- a/src/blocks/card/__subtext/card__subtext.css
+++ b/src/blocks/card/__subtext/card__subtext.css
@@ -1,17 +1,15 @@
 .card__subtext {
+    font-family: Raleway;
+    font-style: normal;
     font-weight: 300;
     font-size: 14px;
-    line-height: 32px;
-    color: #667080;
-    display: none;
-    width: 142px;
+    color: #000;
+    width: 88px;
     margin: auto;
 }
 
 @media screen and (min-width: 1024px) {
     .card__subtext {
-        display: block;
-        margin: 0 0 0 24px;
-        width: 224px;
+        width: 136px;
     }
 }
