--- a/src/blocks/card/__text/card__text.css
+++ b/src/blocks/card/__text/card__text.css
@@ -1,17 +1,19 @@
 .card__text {
-    font-weight: normal;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
-    color: #667080;
+    line-height: 20px;
+    color: #17192d;
     margin: auto;
-    width: 142px;
+    width: 144px;
 }
 
 @media screen and (min-width: 1024px) {
     .card__text {
-        margin: 24px 0 16px 24px;
+        margin: 24px 0 24px 24px;
         font-size: 18px;
-        line-height: 21px;
+        line-height: 24px;
         width: 224px;
     }
 }
