--- a/src/blocks/form/__button/form__button.css
+++ b/src/blocks/form/__button/form__button.css
@@ -1,10 +1,13 @@
 .form__button {
-    background: #667080;
-    border: 2px solid #667080;
+    background: #E85137;
+    border: 2px solid #E85137;
+    border-radius: 8px;
     width: 100%;
     min-height: 32px;
-    font-weight: 300;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 800;
     font-size: 14px;
     line-height: 16px;
-    color: #E5E5E5;
+    color: #F5F1E6;
 }
