--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,5 +1,12 @@
 .form__input {
     border: none;
+    border-radius: 8px;
     outline: none;
     width: 90%;
+}
+
+@media screen and (min-width: 1024px) {
+    .form__input {
+        border-radius: 12px;
+    }
 }
