--- a/src/blocks/form/__label/form__label.css
+++ b/src/blocks/form/__label/form__label.css
@@ -1,7 +1,8 @@
 .form__label {
-    width: 98%;
+    width: 100%;
     min-height: 32px;
-    border: 2px solid #667080;
+    border: 1px solid #737273;
+    border-radius: 8px;
     display: flex;
     justify-content: space-between;
 }
@@ -10,6 +11,7 @@
     .form__label {
         width: 100%;
         min-height: 40px;
-        border: 4px solid #667080;
+        border: 1px solid #17192D;
+        border-radius: 12px;
     }
 }
