--- a/src/blocks/popup/__button-close/popup__button-close.css
+++ b/src/blocks/popup/__button-close/popup__button-close.css
@@ -1,8 +1,17 @@
 .popup__button-close {
+  margin: -45px 15px 0 0;
   width: 16px;
   height: 16px;
   border: none;
   background-color: white;
   background-image: url(../../../images/закрытие-попапа.svg);
   background-size: cover;
+}
+
+@media screen and (min-width: 1024px) {
+  .popup__button-close {
+      width: 24px;
+      height: 24px;
+      margin: 0;
+  }
 }
