--- a/src/blocks/form/__button-submit/form__button-submit.css
+++ b/src/blocks/form/__button-submit/form__button-submit.css
@@ -1,13 +1,16 @@
 .form__button-submit {
     width: 272px;
     height: 32px;
-    margin: 8px auto 84px;
-    font-weight: 300;
+    margin: 8px auto 68px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 800;
     font-size: 14px;
     line-height: 16px;
-    color: #E5E5E5;
-    background-color: #667080;
-    border: 2px solid #667080;
+    color: #F5F1E6;
+    background: #E85137;
+    border: 2px solid #E85137;
+    border-radius: 8px;
 }
 
 @media screen and (min-width: 1024px) {
