--- a/src/blocks/entry/__button/entry__button.css
+++ b/src/blocks/entry/__button/entry__button.css
@@ -1,7 +1,7 @@
 .entry__button {
   width: 76px;
   margin: 0 auto 48px;
-  font-family: Cormorant Garamond;
+  font-family: "Cormorant Garamond";
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
