--- a/src/blocks/form/__button/form__button.css
+++ b/src/blocks/form/__button/form__button.css
@@ -1,13 +1,13 @@
 .form__button {
-    background: #E85137;
-    border: 2px solid #E85137;
-    border-radius: 8px;
-    width: 100%;
-    min-height: 32px;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 16px;
-    color: #F5F1E6;
+  background: #e85137;
+  border: 2px solid #e85137;
+  border-radius: 8px;
+  width: 100%;
+  min-height: 32px;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 16px;
+  color: #f5f1e6;
 }
