--- a/src/blocks/card/__button/card__button.css
+++ b/src/blocks/card/__button/card__button.css
@@ -1,20 +1,20 @@
 .card__button {
-    display: none;
-    width: 160px;
-    height: 32px;
-    background-color: #E85137;
-    border: 2px solid #E85137;
-    border-radius: 8px;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 16px;
-    color: #E5E5E5;
+  display: none;
+  width: 160px;
+  height: 32px;
+  background-color: #e85137;
+  border: 2px solid #e85137;
+  border-radius: 8px;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 16px;
+  color: #e5e5e5;
 }
 
 @media screen and (min-width: 1024px) {
-    .card__button {
-        display: block;
-    }
+  .card__button {
+    display: block;
+  }
 }
