--- a/src/blocks/form/__button-submit/form__button-submit.css
+++ b/src/blocks/form/__button-submit/form__button-submit.css
@@ -1,23 +1,23 @@
 .form__button-submit {
-    width: 272px;
-    height: 32px;
-    margin: 8px auto 68px;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 16px;
-    color: #F5F1E6;
-    background: #E85137;
-    border: 2px solid #E85137;
-    border-radius: 8px;
+  width: 272px;
+  height: 32px;
+  margin: 8px auto 68px;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 16px;
+  color: #f5f1e6;
+  background: #e85137;
+  border: 2px solid #e85137;
+  border-radius: 8px;
 }
 
 @media screen and (min-width: 1024px) {
-    .form__button-submit {
-        width: 100%;
-        height: 40px;
-        font-size: 18px;
-        line-height: 21px;
-    }
+  .form__button-submit {
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
