--- a/src/blocks/irtiative-table/__title/irtiative-table__title.css
+++ b/src/blocks/irtiative-table/__title/irtiative-table__title.css
@@ -1,10 +1,10 @@
 .irtiative-table__title {
-    width: 224px;
-    margin: 0 auto;
-    font-family: Cormorant Garamond;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
-    color: #17192d;
+  width: 224px;
+  margin: 0 auto;
+  font-family: "Cormorant Garamond";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: #17192d;
 }
