--- a/src/blocks/lead/__button/lead__button.css
+++ b/src/blocks/lead/__button/lead__button.css
@@ -4,7 +4,7 @@
   background-color: #e85137;
   border: 2px solid #e85137;
   border-radius: 8px;
-  font-family: Raleway;
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 800;
   font-size: 14px;
