--- a/src/blocks/lead/__container-text/lead__container-text.css
+++ b/src/blocks/lead/__container-text/lead__container-text.css
@@ -5,12 +5,12 @@
 @media screen and (min-width: 1024px) {
   .lead__contanier-text {
     width: 424px;
-    font-family: Raleway;
+    font-family: "Cormorant Garamond";
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
     line-height: 48px;
-    color: #17192C;
+    color: #17192c;
     display: block;
   }
 }
