--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -1,9 +1,9 @@
 .popup__title {
-    font-family: Cormorant Garamond;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 36px;
-    margin: auto;
-    color: #17192D;
+  font-family: "Cormorant Garamond";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 36px;
+  margin: auto;
+  color: #17192d;
 }
